# agent-agui-mvp

./: .gitignore  CLAUDE.md  COPILOTKIT_ARCHITECTURE.md  LICENSE  README.md  llm-3d-interaction-research.md  pyproject.toml  server.py  test_backend_tools.py  test_frontend_tools.py  test_utils.py  video-style-transfer-apis.md  video-style-transfer-research.md
.beads/: issues.jsonl
.github/workflows/: test.yml
backend/: server.py  test_e2e.py  test_tracer_bullet.py  test_utils.py  test_weather.py
backend_v2/: server_langgraph.py  test_server_langgraph.py  tracing.py
backend_v2/tools/: __init__.py  definitions.py
backend_v2/tools/calculator_agent_tool/: __init__.py
backend_v2/tools/get_weather/: __init__.py
backend_v2/tools/haiku_poet/: __init__.py
docs/: ARCHITECTURE.md  FE_BE_TOOL_RACE_CONDITION.md  copilotkit-vs-posthog.md
docs/hogai/: 01-core-execution-framework.md  02-state-management.md  03-runner-streaming.md  04-tool-system.md  05-agent-modes.md  06-context-switching.md  07-prompt-system.md  08-dispatcher-events.md  09-checkpoint-persistence.md  10-example-tools.md  README.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo
frontend/__tests__/: CopilotContext.test.tsx  fetchTimeout.test.tsx  useChat.test.tsx  useCopilotAction.test.tsx
frontend/dist-node/: tsconfig.node.tsbuildinfo
frontend/src/: App.css  App.tsx  tools.ts
frontend/src/components/: ChatContainer.module.css  ChatContainer.tsx  ColorPicker.module.css  ColorPicker.tsx  ContextDebugger.module.css  ContextDebugger.tsx  DefaultActions.tsx  InputArea.module.css  InputArea.tsx  LLMPayloadDebugger.module.css  LLMPayloadDebugger.tsx  Loading.module.css  Loading.tsx  Message.module.css  Message.tsx  TodoList.module.css  TodoList.tsx  index.ts
frontend/src/context/: CopilotContext.tsx  PayloadContext.tsx  index.ts
frontend/src/hooks/: index.ts  useChat.ts  useCopilotAction.ts  useCopilotReadable.ts  useTree.ts
frontend/src/types/: index.ts
frontend/tests/: fe-be-tool-sync.spec.ts  frontend-tools.spec.ts  full-functionality.spec.ts  todo-write.spec.ts  tool-chaining.spec.ts  tool-execution-tracking.spec.ts
frontend_v2/: package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend_v2/dist-node/: vite.config.js
frontend_v2/src/: App.css  App.tsx  main.tsx  types.ts  useChat.ts
frontend_v2/tests/: agui.spec.ts  debug.spec.ts  sequential-tools.spec.ts
reference_code/ag-ui-main/: README.md  pnpm-lock.yaml  pnpm-workspace.yaml
reference_code/ag-ui-main/.github/: CODEOWNERS
reference_code/ag-ui-main/docs/: docs.json  integrations.mdx  introduction.mdx
reference_code/ag-ui-main/integrations/agent-spec/python/: pyproject.toml
reference_code/ag-ui-main/integrations/agent-spec/python/examples/: pyproject.toml
reference_code/ag-ui-main/integrations/aws-strands/python/: .gitignore  README.md  pyproject.toml
reference_code/ag-ui-main/integrations/aws-strands/python/examples/: .gitignore  README.md  pyproject.toml
reference_code/ag-ui-main/integrations/aws-strands/python/examples/server/: __init__.py  __main__.py
reference_code/ag-ui-main/integrations/aws-strands/python/examples/server/api/: __init__.py  agentic_chat.py  agentic_generative_ui.py  backend_tool_rendering.py  human_in_the_loop.py  shared_state.py
reference_code/ag-ui-main/integrations/aws-strands/python/src/ag_ui_strands/: __init__.py  agent.py  config.py  endpoint.py  types.py  utils.py
reference_code/ag-ui-main/integrations/langgraph/python/: pyproject.toml
reference_code/ag-ui-main/integrations/langgraph/python/examples/: README.md
reference_code/ag-ui-main/integrations/langgraph/python/examples/agents/agentic_chat/: agent.py
reference_code/ag-ui-main/integrations/langgraph/python/examples/agents/shared_state/: agent.py
reference_code/ag-ui-main/integrations/microsoft-agent-framework/python/examples/: .env.example  .gitignore  README.md  pyproject.toml
reference_code/ag-ui-main/integrations/microsoft-agent-framework/python/examples/agents/: dojo.py
reference_code/ag-ui-main/integrations/pydantic-ai/python/examples/: pyproject.toml
reference_code/ag-ui-main/integrations/pydantic-ai/python/examples/server/: __init__.py
reference_code/ag-ui-main/integrations/pydantic-ai/python/examples/server/api/: agentic_generative_ui.py
reference_code/ag-ui-main/sdks/community/rust/: Cargo.toml  TODO
reference_code/ag-ui-main/sdks/community/rust/crates/ag-ui-client/: Cargo.toml  README.md
reference_code/ag-ui-main/sdks/community/rust/crates/ag-ui-client/examples/: basic_agent.rs  generative_ui.rs  logging_subscriber.rs  shared_state.rs  sse_example.rs
reference_code/ag-ui-main/sdks/community/rust/crates/ag-ui-client/scripts/: basic_agent.py  generative_ui.py  shared_state.py
reference_code/ag-ui-main/sdks/community/rust/crates/ag-ui-client/src/: agent.rs  error.rs  event_handler.rs  http.rs  lib.rs  sse.rs  stream.rs  subscriber.rs
reference_code/ag-ui-main/sdks/community/rust/crates/ag-ui-client/tests/: http_agent_test.rs  sse_test.rs
reference_code/ag-ui-main/sdks/community/rust/crates/ag-ui-core/: Cargo.toml  README.md
reference_code/ag-ui-main/sdks/community/rust/crates/ag-ui-core/src/: error.rs  event.rs  lib.rs  state.rs
reference_code/ag-ui-main/sdks/community/rust/crates/ag-ui-core/src/types/: context.rs  ids.rs  input.rs  message.rs  mod.rs  tool.rs
reference_code/ag-ui-main/sdks/community/rust/crates/ag-ui-core/tests/: unit.rs
reference_code/open-ag-ui-demo-langgraph-main/: README.md
reference_code/open-ag-ui-demo-langgraph-main/agent/: README.md  main.py  prompts.py  pyproject.toml  stock_analysis.py
specs/001-multi-agent-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/001-multi-agent-chatbot/checklists/: requirements.md
specs/001-multi-agent-chatbot/contracts/: api.yaml
thoughts/shared/plans/: 2025-01-09-calculator-agent-tool.md  2025-12-20-option-b-auto-follow-up-tool-sync.md  2025-12-24-posthog-style-tool-sync.md  (+2 more)
(+269 files in other folders)
