[project]
name = "minimal-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "openai>=2.11.0",
    "pydantic-ai-slim[ag-ui]>=1.32.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.38.0",
]
