[project]
name = "minimal-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "openai>=2.11.0",
    "pydantic>=2.0.0",
    "pydantic-ai-slim[ag-ui]>=1.32.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

# Pyright/Pylance configuration (VS Code)
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
# Pydantic v2 is well-supported by pyright out of the box
reportMissingImports = true
reportMissingTypeStubs = false

# Mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

# Pydantic mypy plugin settings
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Ruff linter configuration
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "S",      # flake8-bandit (security)
    "B",      # flake8-bugbear
]
ignore = [
    "S101",    # Use of assert detected (we use asserts for type narrowing)
    "E501",    # Line too long (handled by formatter)
    "E402",    # Module level import not at top (we have logging setup first)
    "ANN001",  # Missing type annotation for function argument
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function
    "ANN204",  # Missing return type annotation for special method
    "S104",    # Possible binding to all interfaces (intentional for dev server)
    "S307",    # Use of eval (intentional for calculator)
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "ANN"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
