[project]
name = "ag_ui_strands"
version = "0.1.0"
authors = [
    { name = "AG-UI Contributors" }
]
requires-python = ">=3.12, <3.14"
dependencies = [
    "ag-ui-protocol>=0.1.10",
    "fastapi>=0.115.12",
    "strands-agents>=1.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ag_ui_strands"]

[tool.hatch.metadata]
allow-direct-references = true
