[project]
name = "microsoft-agent-framework-dojo"
version = "0.1.0"
description = "Microsoft Agent Framework Python examples for AG-UI Dojo"
authors = [{ name = "Microsoft Agent Framework Team" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agent-framework-ag-ui>=1.0.0b251117",
    "python-dotenv>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
dev = "agents.dojo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]
