tool.uv.package = true

[project]
name = "server"
version = "0.1.0"
description = "Example usage of the AG-UI adapter for Pydantic AI"
license = "MIT"

readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic-ai-slim[openai,ag-ui]==1.22.0",
    "dotenv>=0.9.9"
]
authors = []

[project.scripts]
dev = "server:main"
